# portfolio-site

./: LICENSE  README.md  db.sqlite3  pyproject.toml
home/: __init__.py  urls.py
home/migrations/: 0001_initial.py  0002_delete_project.py
home/static/css/: carousel.css  custom.css
home/templates/home/: base.html  home.html
portfolio/: __init__.py  admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_rename_project_blogproject.py  0003_remove_blogproject_image.py  0004_remove_blogproject_description_and_more.py  0005_blogproject_description.py  0006_remove_blogproject_url.py  0007_blogproject_time.py  0008_alter_blogproject_date_alter_blogproject_time.py  0009_alter_blogproject_date_alter_blogproject_time.py  0010_alter_blogproject_date_alter_blogproject_time.py  0011_cardproject_delete_blogproject.py  0012_alter_cardproject_date_alter_cardproject_time.py  0013_alter_cardproject_date_alter_cardproject_time.py  0014_alter_cardproject_date_alter_cardproject_time.py  0015_cardproject_image_cardproject_url.py  0016_alter_cardproject_image.py  0017_rename_image_cardproject_logo_cardproject_res1_and_more.py  0018_rename_res1_descr_cardproject_res1_head_and_more.py  0019_remove_cardproject_description_and_more.py  0020_cardproject_report.py  0021_cardproject_video.py  0022_alter_cardproject_report_alter_cardproject_res1_and_more.py  0023_alter_cardproject_logo.py  0024_cardproject_video_head_cardproject_video_lead_and_more.py  0025_rename_url_cardproject_github.py
portfolio_project/: settings.py  urls.py
(+5 files in other folders)
