[tool.poetry]
name = "portfolio-site"
version = "0.1.0"
description = ""
authors = ["Aleksey Khaleev <aleksey52nn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.1.7"
django-rest-framework = "^0.1.0"
pillow = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
